--- a/public/a/index.html
+++ b/public/a/index.html
@@ -13,12 +13,14 @@
 
 		<script src="/lib/js/underscore-min.js"></script>
 		<script src="/lib/js/jquery.min.js"></script>
-		<script src="/lib/js/store.min.js"></script>
+        <script src="/lib/js/Chart.min.js"></script>
 		<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 		<script src="/lib/js/jquery.serializeJSON.min.js"></script>
         <script src="/lib/js/jquery.qrcode.min.js"></script>
         <script src="/lib/js/jquery.ajaxfileupload.js"></script>
 		<script src="/lib/js/ajax-form.js"></script>
+        <script src="/lib/js/drawPieChart.js"></script>
+        <script src="/lib/js/drawVerificationCode.js"></script>
 		<script src="/lib/js/u.js"></script>
 		<script src="/lib/js/a.js"></script>
         <script>
