--- a/public/a/view.html
+++ b/public/a/view.html
@@ -21,6 +21,7 @@
     <div class="btn-group-vertical">
         <button href="#/reaction" class="btn btn-default btn-lg btn-block">听众动态</button>
         <button href="#/share" class="btn btn-default btn-lg btn-block">共享文件</button>
+        <button href="#/votes" class="btn btn-default btn-lg btn-block">投票列表</button>
         <button id="btn-exit" class="btn btn-danger btn-lg btn-block">退出空间</button>
     </div>
 </div>
