--- a/public/a/share.html
+++ b/public/a/share.html
@@ -1,14 +1,22 @@
 ﻿
-
+<style>
+    #table-filelist th:nth-child(1),
+    #table-filelist th:nth-child(2) {
+        min-width: 60px;
+    }
+    #table-filelist th:nth-child(3) {
+        min-width: 80px;
+    }
+</style>
 
 <div id="main-wrapper">
     <h1>文件共享</h1>
 
-    <table id="table-filelist" class="table table-hover">
+    <table id="table-filelist" class="table table-striped">
         <thead>
         <tr>
             <th>文件名</th>
-            <th>文件大小</th>
+            <th>大小</th>
             <th>下载次数</th>
         </tr>
         </thead>
@@ -25,27 +33,32 @@
 	getFileList();
 
     function getFileList() {
-        $tbody.empty();
         $.ajax({
             type: 'get',
             url: '/do/a/filelist',
             success: function(resObj) {
-                if (resObj['ok']) {
-                    var fileList = resObj['fileList'];
-                    _.each(fileList, function(file) {
-                        $([
-                            '<tr>',
-                            '<td>',
-                                '<a class="ex-link" href="/do/downfile?fid='+ file['id'] +'">' + file['name'] + '</a>',
-                            '</td>',
-                            '<td>' + Math.ceil(file['size'] / 1024) + ' KB </td>',
-                            '<td>' + file['timesDown'] + '</td>',
-                            '</tr>'
-                        ].join('')).appendTo($tbody);
-                    });
-                } else {
-                    alert('文件列表获取失败');
+                if (! resObj['ok']) {
+                    return alert('文件列表获取失败');
                 }
+                var fileList = resObj['fileList'],
+                        tbodyHtml = fileList.length ? _.reduce(fileList, function(memo, file) {
+                            return memo + [
+                                '<tr>',
+                                    '<td>',
+                                        '<a class="ex-link" href="/do/downfile?fid='+ file['id'] +'">',
+                                            file['name'],
+                                        '</a>',
+                                    '</td>',
+                                    '<td>' + Math.ceil(file['size'] / 1024) + ' KB </td>',
+                                    '<td>' + file['timesDown'] + '</td>',
+                                '</tr>'
+                            ].join('');
+                        }, '') : [
+                            '<tr>',
+                                '<td colspan="3">没有记录</td>',
+                            '</tr>'
+                        ].join('');
+                $tbody.html(tbodyHtml);
             }
         });
     }
