--- a/public/a/viewvote.html
+++ b/public/a/viewvote.html
@@ -21,7 +21,7 @@
     var vid = getHashParams()['vid'],
         colors = ["#F38630", "#E0E4CC", "#69D2E7", "#5E344C"];
 
-    $.get('/do/s/viewvote?vid=' + vid, function(resObj) {
+    $.get('/do/a/viewvote?vid=' + vid, function(resObj) {
         var ok = resObj['ok'],
                 msg = resObj['msg'];
         msg && alert(msg);
