--- a/public/s/reaction.html
+++ b/public/s/reaction.html
@@ -12,20 +12,19 @@
     <!-- Tab panes -->
     <div class="tab-content">
         <div class="tab-pane active" id="tab-msg">
-            <table id="table-msg" class="table table-hover">
+            <table id="table-msg" class="table table-striped">
                 <thead>
                 <tr>
                     <th>昵称</th>
-                    <th class="long">发言</th>
+                    <th>发言</th>
                     <th>发言时间</th>
                 </tr>
                 </thead>
-
                 <tbody></tbody>
             </table>
         </div>
         <div class="tab-pane" id="tab-audience">
-            <table id="table-audience" class="table table-hover">
+            <table id="table-audience" class="table table-striped">
                 <thead>
                 <tr>
                     <th>昵称</th>
@@ -40,8 +39,8 @@
 </div>
 
 <script>
-    var $table_audience = $('#table-audience'),
-		$table_msg = $('#table-msg');
+    var $tableAudience = $('#table-audience'),
+		$tableMsg = $('#table-msg');
 
     $('.nav-tabs a').click(function (e) {
         e.preventDefault();
@@ -56,49 +55,55 @@
 		updateMsgList();
 	}
     function updateAudienceList() {
-        var $tbody = $table_audience.find('tbody');
-        $tbody.empty();
+        var $tbody = $tableAudience.find('tbody');
         $.ajax({
             type: 'get',
             url: '/do/s/audiencelist',
             success: function(resObj) {
-                if (resObj['ok']) {
-                    var audienceList = resObj['audienceList'];
-                    _.each(audienceList, function(audience) {
-                        $([
-                            '<tr>',
+                if (! resObj['ok']) {
+                    return alert('听众列表获取失败');
+                }
+                var audienceList = resObj['audienceList'],
+                        tbodyHtml = audienceList.length ? _.reduce(audienceList, function(memo, audience) {
+                    return memo + [
+                        '<tr>',
                             '<td>' + audience.name + '</td>',
                             '<td>' + strTime(Date.now() - audience.jointime, true) + '</td>',
-                            '</tr>'
-                        ].join('')).appendTo($tbody);
-                    });
-                } else {
-                    alert('听众列表获取失败');
-                }
+                        '</tr>'
+                    ].join('');
+                }, '') : [
+                    '<tr>',
+                        '<td colspan="2">没有记录</td>',
+                    '</tr>'
+                ].join('');
+                $tbody.html(tbodyHtml);
             }
         });
     }
     function updateMsgList() {
-        var $tbody = $table_msg.find('tbody');
-        $tbody.empty();
+        var $tbody = $tableMsg.find('tbody');
         $.ajax({
             type: 'get',
             url: '/do/s/msglist',
             success: function(resObj) {
-                if (resObj['ok']) {
-                    var msgList = resObj['msgList'];
-                    _.each(msgList, function(msg) {
-                        $([
-                            '<tr>',
-                                '<td>' + msg.audienceName + '</td>',
-                                '<td class="long">' + msg.text + '</td>',
-                                '<td>' + strTime(msg.sendtime) + '</td>',
-                            '</tr>'
-                        ].join('')).appendTo($tbody);
-                    });
-                } else {
-                    alert('发言列表获取失败');
+                if (! resObj['ok']) {
+                    return alert('发言列表获取失败');
                 }
+                var msgList = resObj['msgList'],
+                        tbodyHtml = msgList.length ? _.reduce(msgList, function(memo, msg) {
+                            return memo + [
+                                '<tr>',
+                                    '<td>' + msg.audienceName + '</td>',
+                                    '<td>' + msg.text + '</td>',
+                                    '<td>' + strTime(msg.sendtime) + '</td>',
+                                '</tr>'
+                            ].join('');
+                        }, '') : [
+                            '<tr>',
+                                '<td colspan="3">没有记录</td>',
+                            '</tr>'
+                        ].join('');
+                $tbody.html(tbodyHtml);
             }
         });
     }
