--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -4,7 +4,12 @@
 
     <form id="form-enter">
         <div class="form-group">
-            <input type="text" class="form-control" name="lkey" placeholder="讲座序列号">
+            <div class="input-group">
+                <input type="text" class="form-control" name="lkey" placeholder="讲座序列号">
+                <span class="input-group-btn">
+                    <button class="btn btn-primary" href="#/open">申请讲座</button>
+                </span>
+            </div>
         </div>
         <div class="form-group">
             <input type="text" class="form-control" name="lpwd" placeholder="输入密码">
