--- a/public/s/share.html
+++ b/public/s/share.html
@@ -1,12 +1,7 @@
 
 <style>
-    #table-filelist th:nth-child(1),
-    #table-filelist th:nth-child(3) {
-        min-width: 80px;
-    }
-    #table-filelist th:nth-child(2),
     #table-filelist th:nth-child(4) {
-        min-width: 60px;
+        min-width: 50px;
     }
 </style>
 
@@ -17,7 +12,7 @@
         <thead>
         <tr>
             <th>文件名</th>
-            <th>大小</th>
+            <th>文件大小</th>
             <th>下载次数</th>
             <th>操作</th>
         </tr>
