--- a/public/a/share.html
+++ b/public/a/share.html
@@ -1,10 +1,7 @@
 ﻿
 <style>
-    #table-filelist th:nth-child(1),
-    #table-filelist th:nth-child(2) {
-        min-width: 60px;
-    }
-    #table-filelist th:nth-child(3) {
+    #table-filelist th:nth-child(2),
+    #table-filelist th {
         min-width: 80px;
     }
 </style>
@@ -16,7 +13,7 @@
         <thead>
         <tr>
             <th>文件名</th>
-            <th>大小</th>
+            <th>文件大小</th>
             <th>下载次数</th>
         </tr>
         </thead>
