--- a/public/a/reaction.html
+++ b/public/a/reaction.html
@@ -24,12 +24,14 @@
                 <tbody></tbody>
             </table>
             <form  id="form-send" action="/do/a/sendmsg" method="post">
-                <div class="input-group">
-                    <input type="text" name="msg" class="form-control" placeholder="请输入你想说的话">
-                      <span class="input-group-btn">
-                        <button class="btn btn-primary" type="submit" >发送消息</button>
-                      </span>
-                </div><!-- /input-group -->
+                <div class="form-group">
+                    <div class="input-group">
+                        <input type="text" name="msg" class="form-control" placeholder="请输入你想说的话">
+                        <span class="input-group-btn">
+                            <button class="btn btn-primary" type="submit" >发送消息</button>
+                        </span>
+                    </div>
+                </div>
             </form>
      </div>
         <div class="tab-pane" id="tab-audience">
