--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -22,9 +22,11 @@
 				</span>
             </div>
         </div>
-        <button type="submit" class="btn btn-primary btn-lg btn-block">
-            进入讲座
-        </button>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">
+                进入讲座
+            </button>
+        </div>
     </form>
 </div>
 
