--- a/public/s/open.html
+++ b/public/s/open.html
@@ -20,16 +20,16 @@
 				</span>
 			</div>
 		</div>
-		<button type="submit" class="btn btn-primary btn-lg btn-block">
-			开启讲座
-		</button>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">
+                开启讲座
+            </button>
+        </div>
 	</form>
 
 </div>
 
 
-
-<!-- js -->
 <script>
     var $formOpen = $('#form-open'),
             $canvasVcode = $('#canvas-vcode');
