--- a/public/s/view.html
+++ b/public/s/view.html
@@ -51,7 +51,7 @@
                     msg = resObj['msg'];
             msg && alert(msg);
             if (ok) {
-                loadFrame('#/open');
+                loadFrame('#/enter');
             }
         });
     });
