--- a/public/s/view.html
+++ b/public/s/view.html
@@ -20,7 +20,7 @@
 		</li>
 	</ul>
     <div class="btn-group-vertical">
-         <button href="#/reaction" class="btn btn-default btn-lg btn-block">听众动态</button>
+         <button href="#/audience" class="btn btn-default btn-lg btn-block">听众列表</button>
          <button href="#/share" class="btn btn-default btn-lg btn-block">共享文件</button>
          <button href="#/votes" class="btn btn-default btn-lg btn-block">投票管理</button>
          <button id="btn-close" class="btn btn-danger btn-lg btn-block">退出空间</button>
