--- a/public/a/qna.html
+++ b/public/a/qna.html
@@ -1,5 +1,5 @@
 <div id="main-wrapper">
-    <h1>问题相关</h1>
+    <h1>讲座提问</h1>
 
     <table id="table-msglist" class="table table-striped">
         <thead>
