--- a/public/s/qna.html
+++ b/public/s/qna.html
@@ -1,7 +1,7 @@
 
 
 <div id="main-wrapper">
-    <h1>问题相关</h1>
+    <h1>提问管理</h1>
 
     <table id="table-msglist" class="table table-striped">
         <thead>
