--- a/public/a/view.html
+++ b/public/a/view.html
@@ -22,6 +22,7 @@
         <button href="#/audience" class="btn btn-default btn-lg btn-block">听众列表</button>
         <button href="#/share" class="btn btn-default btn-lg btn-block">共享文件</button>
         <button href="#/votes" class="btn btn-default btn-lg btn-block">投票列表</button>
+        <button href="#/qna" class="btn btn-default btn-lg btn-block">讲座提问</button>
         <button id="btn-exit" class="btn btn-danger btn-lg btn-block">退出空间</button>
     </div>
 </div>
