--- a/public/a/qna.html
+++ b/public/a/qna.html
@@ -1,23 +1,65 @@
 <div id="main-wrapper">
-    <h1>讲座提问</h1>
+    <h1>你想提问的</h1>
 
-    <table id="table-msglist" class="table table-striped">
-        <thead>
-        <tr>
-            <th>听众昵称</th>
-            <th>提问内容</th>
-        </tr>
-        </thead>
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs">
+        <li>
+            <a class="ex-link" href="#tab-list" data-toggle="tab">问题列表</a>
+        </li>
+        <li>
+            <a class="ex-link" href="#tab-add" data-toggle="tab">提出问题</a>
+        </li>
+    </ul>
 
-        <tbody></tbody>
-    </table>
+    <!-- Tab panes -->
+    <div class="tab-content">
+        <div class="tab-pane active" id="tab-list">
+            <table id="table-msglist" class="table table-striped">
+            <thead>
+            <tr>
+                <th>听众昵称</th>
+                <th>提问内容</th>
+            </tr>
+            </thead>
+
+            <tbody></tbody>
+            </table>
+        </div>
+        <div class="tab-pane" id="tab-add">
+            <form id="form-add">
+                <div class="form-group">
+                    <textarea class="form-control" rows="3" name="msg" placeholder="提问内容"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary btn-lg btn-block">
+                    添加问题
+                </button>
+            </form>
+        </div>
+    </div>
 </div>
 
 
 <script>
     var $table = $('#table-msglist'),
-            $tbody = $table.find('tbody');
+            $tbody = $table.find('tbody'),
+    $formAdd = $('#form-add');
 
+    $('.nav-tabs a').click(function (e) {
+        e.preventDefault();
+        getMessageList();
+        $(this).tab('show');
+    }).first().tab('show');
+
+    $formAdd.ajaxForm({
+        type: 'post',
+        url: '/do/a/sendmsg',
+        success: function(resObj) {
+            alert(resObj['msg']);
+            if (resObj['ok']) {
+                reloadFrame();
+            }
+        }
+    });
     getMessageList();
 
     function getMessageList() {
