--- a/public/s/qna.html
+++ b/public/s/qna.html
@@ -1,7 +1,19 @@
-
+<style>
+         #form-toggle{
+            margin-bottom: 20px;;
+         }
+</style>
 
 <div id="main-wrapper">
     <h1>提问管理</h1>
+
+    <form id="form-toggle">
+        <div class="btn-group btn-group-lg">
+            <button type="submit" class="btn btn-default" name="state" value="open">开启</button>
+            <button type="submit" class="btn btn-default" name="state" value="close">关闭</button>
+        </div>
+    </form>
+
 
     <table id="table-msglist" class="table table-striped">
         <thead>
@@ -18,7 +30,33 @@
 
 <script>
     var $table = $('#table-msglist'),
-            $tbody = $table.find('tbody');
+            $tbody = $table.find('tbody'),
+            $formToggle=$('#form-toggle');
+
+    $.get("/do/s/getqna", function(resObj){
+        var state = resObj['state'];
+        $formToggle.find('[value="'+ state +'"]').addClass('active');
+    });
+
+    $formToggle.find('[name="state"]').on('click', function(){
+        $(this).addClass('active').siblings().removeClass('active');
+    });
+    $formToggle.on('submit', function(event){
+        event.preventDefault();
+        $.ajax({
+            type: 'get',
+            data: {
+                state: $formToggle.find('[name="state"].active').val()
+            },
+            url: '/do/s/setqna',
+            success: function(resObj) {
+                alert(resObj['msg']);
+                if (resObj['ok']) {
+                    reloadFrame();
+                }
+            }
+        });
+    });
 
     getMessageList();
 
