--- a/public/s/view.html
+++ b/public/s/view.html
@@ -24,6 +24,7 @@
          <button href="#/share" class="btn btn-default btn-lg btn-block">共享文件</button>
          <button href="#/votes" class="btn btn-default btn-lg btn-block">投票管理</button>
          <button href="#/qna" class="btn btn-default btn-lg btn-block">提问管理</button>
+         <button href="#/lotterys" class="btn btn-default btn-lg btn-block">抽奖管理</button>
          <button id="btn-close" class="btn btn-danger btn-lg btn-block">退出空间</button>
     </div>
 </div>
