--- a/public/s/enter.html
+++ b/public/s/enter.html
@@ -44,6 +44,8 @@
         success: function(resObj) {
             if (resObj['ok']) {
                 loadFrame('#/view');
+                $navbar.find('.sec').addClass('hidden')
+                    .filter('#sec-in').removeClass('hidden');
             } else {
                 alert(resObj['msg']);
                 showValicode();
