--- a/public/s/index.html
+++ b/public/s/index.html
@@ -8,21 +8,56 @@
 	</head>
 	<body>
 		<div id="body-wrapper">
+			<div id="navbar" class="navbar navbar-default navbar-static-top" role="navigation">
+				<div class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand">演讲家App</a>
+					</div>
+					<section id="sec-out" class="sec hidden">
+						<div class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								<li class="active"><a href="#/enter">进入讲座</a></li>
+								<li><a href="#/open">申请讲座</a></li>
+							</ul>
+						</div>
+					</section>
+					<section id="sec-in" class="sec hidden">
+						<div class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								<li class="active"><a href="#/view">查看讲座</a></li>
+								<li><a href="#/audience">听众列表</a></li>
+								<li><a href="#/share">共享文件</a></li>
+								<li><a href="#/votes">投票管理</a></li>
+								<li><a href="#/qna">提问管理</a></li>
+								<li><a href="#/lotterys">抽奖管理</a></li>
+							</ul>
+							<ul class="nav navbar-nav navbar-right">
+								<li></li>
+							</ul>
+						</div>
+					</section>
+				</div>
+			</div>
+
 			<div id="frame" class="container"></div>
 		</div>
 
 		<script src="/lib/js/underscore-min.js"></script>
 		<script src="/lib/js/jquery.min.js"></script>
-        <script src="/lib/js/Chart.min.js"></script>
+				<script src="/lib/js/Chart.min.js"></script>
 		<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 		<script src="/lib/js/jquery.serializeJSON.min.js"></script>
-        <script src="/lib/js/jquery.qrcode.min.js"></script>
-        <script src="/lib/js/jquery.ajaxfileupload.js"></script>
+				<script src="/lib/js/jquery.qrcode.min.js"></script>
+				<script src="/lib/js/jquery.ajaxfileupload.js"></script>
 		<script src="/lib/js/ajax-form.js"></script>
-        <script src="/lib/js/drawPieChart.js"></script>
-        <script src="/lib/js/drawVerificationCode.js"></script>
+				<script src="/lib/js/drawPieChart.js"></script>
+				<script src="/lib/js/drawVerificationCode.js"></script>
 		<script src="/lib/js/u.js"></script>
 		<script src="/lib/js/s.js"></script>
-
 	</body>
 </html>
