--- a/public/s/viewvote.html
+++ b/public/s/viewvote.html
@@ -1,10 +1,19 @@
 
+<style>
+    #content {
+        padding-left: 40px;
+    }
+    #content:before {
+        content: '　　';
+    }
+</style>
+
 <div id="main-wrapper">
     <h1>投票详情</h1>
     <ul id="list-viewvote" class="list-group">
         <li class="list-group-item">
             <span class="li-label">题目</span>
-            <span id="content"></span>
+            <p id="content"></p>
         </li>
         <li class="list-group-item">
             <span class="li-label">选项相关</span>
